# PLCWEB

./: README.md  pyproject.toml
backend/: database.py  entities.py  main.py  plc.db
backend/routes/: posts.py
frontend/: deploy.sh  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: decorheader.css  decorheader.jsx  footer.jsx  home.css  home.jsx  navbar.css  navbar.jsx  posts.css  posts.jsx
